--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <body>
     <div class="container">
         <p>I just saw a flying penguin! Let me tell you, it was the most majestic thing I have ever seen! I don’t feel like living because nothing will ever be as majestic as that. I never want to see again if nothing will ever be that beautiful again. I am crying now and plan on ripping my eyes out. I must go now to do that.</p>
-    </div>s
+    </div>
 </body>
 </html>
