--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 </head>
 <body>
     <div class="container">
+        <a href="https://www.youtube.com/watch?v=3Jnubcn2G-Y" class="link" target="_blank"></a>
         <p>I just saw a flying penguin! Let me tell you, it was the most majestic thing I have ever seen! I don’t feel like living because nothing will ever be as majestic as that. I never want to see again if nothing will ever be that beautiful again. I am crying now and plan on ripping my eyes out. I must go now to do that</p>
         <p><br>Ohh, bury my mother, pale and slight, Bury my father with his eyes shut tight, Bury my sisters two by two, and then when you're done, let's bury me tooooo!</p>
+        <a href="https://www.youtube.com/watch?v=d79-UEc3c4I" class="link" target="_blank"></a>
     </div>
 </body>
 </html>
